# yapperai-plugins

./: Cargo.toml  LICENSE  Makefile  README.md  consume.wat  echo.wat  input_offset.wat  upper.wat
.github/workflows/: release.yaml
assembly-script/: package.json  pnpm-lock.yaml
assembly-script/src/: index.ts
count_vowels/: Cargo.toml
greet/: Cargo.toml
http/: Cargo.toml
http/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
plugins/: count_vowels.wasm  greet.wasm  http.wasm  memory.wasm  read_write.wasm  ui.wasm
read_write/: Cargo.toml
read_write/src/: lib.rs
runtimes/js/: package.json  pnpm-lock.yaml  tsconfig.json
runtimes/js/src/: index.ts
ui/: Cargo.toml
ui/src/: lib.rs
